stuf/src/p4/tests/t017.err
Semantic error on line 2: Variable 'dollar' is an array.
