stuf/src/p4/tests/t017.gpl
rectangle dollar[10];
int top=dollar.x; //error: variable is an array
